<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/fmBanner"
        layout="@layout/blank_activity" />

    <RelativeLayout
        android:id="@+id/profileShowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fmBanner"
        android:background="@drawable/tabbar_img" >

        <TextView
            android:id="@+id/profileTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_settings_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/saveProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/hello_world"
            android:padding="10dp"
            android:src="@drawable/done_img"
            android:text="@string/save_text" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/insertImgProfileBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/profileShowLayout"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hello_world"
        android:layout_margin="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/add_image" />

    <EditText
        android:id="@+id/userNameEdt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertImgProfileBtn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/name_text"
        android:textColor="#000000"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/userPhoneNumberEdt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/userNameEdt"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:digits="0123456789+"
        android:ems="10"
        android:hint="@string/phone_text"
        android:inputType="phone"
        android:textColor="#000000"
        android:textSize="12sp" />

</RelativeLayout>