<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fm_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/header_bg" >

    <ImageView
        android:id="@+id/header_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/default_img_describer"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/logo" />

    <com.ais.sand.helper.AisTextView
        android:id="@+id/fm91_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/header_img"
        android:text="@string/fm_banner_text"
        android:textColor="@color/fm_header_color"
        android:textSize="@dimen/fm_banner_size"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/emergency_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:contentDescription="@string/hello_world"
        android:onClick="emergencyBtnOnClick"
        android:paddingRight="5dp"
        android:src="@drawable/emergency_btn_img" />

</RelativeLayout>