<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listview_img"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/submenuCameraLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cctvBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/submenu_img"
            android:onClick="cctvBtnOnClick"
            android:text="@string/cctv_btn_text" />

        <Button
            android:id="@+id/positionBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/submenu_img"
            android:text="@string/position_btn_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/searchCameraEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:textColor="#000000"
        android:textSize="12sp" />

    <GridView
        android:id="@+id/cameraGridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="100dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth" >
    </GridView>

</LinearLayout>