<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/fm_news_detail_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.ais.sand.helper.AisTextView
            android:id="@+id/fm91_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/fm_banner_text"
            android:textSize="@dimen/fm_banner_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/emergency_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="emergencyBtnOnClick"
            android:text="@string/emergency_btn_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fm_news_detail_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fm_news_detail_banner"
        android:background="#FF000000" >

        <TextView
            android:id="@+id/cameraDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+id/news_headline_text" />

        <ImageView
            android:id="@+id/cameraDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_img_describer"
            android:layout_below="@+id/cameraDescription"
            android:layout_margin="0dp"
            android:src="@drawable/ic_launcher" />

    </RelativeLayout>

</RelativeLayout>