<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRoot"
    android:layout_width="270dp"
    android:layout_height="match_parent"
    android:background="@color/lime_green"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/radiusLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/headpopup_img"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/settingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/rewind_settings_dialog_text"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/oneKiloLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/oneKilometerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/one_day_text"
            android:textColor="@color/white" >
        </TextView>

        <RadioButton
            android:id="@+id/oneDayRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/radio_btn_img"
            android:padding="5dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/threeKiloLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/threeKilometerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/three_day_text"
            android:textColor="@color/white" >
        </TextView>

        <RadioButton
            android:id="@+id/threeDayRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/radio_btn_img"
            android:padding="5dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/fiveKiloLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/fiveKilometerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/seven_day_text"
            android:textColor="@color/white" >
        </TextView>

        <RadioButton
            android:id="@+id/sevenDayRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/radio_btn_img"
            android:padding="5dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/okCancelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/cancelRadiusBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/hello_world"
            android:padding="5dp"
            android:src="@drawable/cancel_btn_img" >
        </ImageButton>

        <ImageButton
            android:id="@+id/okRadiusBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/hello_world"
            android:padding="5dp"
            android:src="@drawable/ok_btn_img" >
        </ImageButton>
    </LinearLayout>

</LinearLayout>